Revision history for Perl extension JavaScript::QuickJS:

0.20
- Properly free QuickJS resources upon failure to convert Perl parameters
  to JavaScript.

0.19 Fri 1 Dec 2023
- BREAKING CHANGE: Enabling std() or os() now creates globals by those names.
  This matches the “qjs” binary’s behavior.
- Update to latest quickjs (03cc5ec).

0.18 Wed 29 Nov 2023
- Fix segfault when importing "os".

0.17 Thu 12 Jan 2023
- Add Windows support.
- Fix a leftover debugging artifact.

0.16 Sun 8 Jan 2023
- Update easyxs to fix Solaris strnlen problem seen in CPAN Testers.
- Small fix to docs.

0.15 Thu 8 Sep 2022
- Add Date compatibility.
- QuickJS memory-management parameters are now configurable.
- BigInt et al. on 64-bit no longer requires a compiler that implements
  int128. (e.g., CloudLinux 6 can now have BigInt)
- QuickJS runtime info is now set to the module name. (Debugging aid.)
- Docs improvement for memory-leak notifications. (Thank you, perlancar!)
- Docs now demonstrate use of `std` module, and a test is added.

0.14 Sun 4 Sep 2022
- Fix parallel build errors. (Thank you, CPAN Testers!)

0.13 Thu 25 Aug 2022
- Detect missing gmake up-front at build time.
- Detect at build time when linking to libatomic is necessary, and only
  link in that case.
- Allow direct enable/disable of linking to libatomic.

0.12 Mon 6 Jan 2022
- Add await() so Perl can wait until JS’s pending jobs finish.
- Make eval_module() return the JS object so chaining is easier.
- Explicitly document interfaces that return the JS object.

0.11 Sun 15 May 2022
- BREAKING CHANGE: JavaScript Functions converted to Perl now become
  instances of a new class, JavaScript::QuickJS::Function. That class
  is overloaded to act as a coderef, so MOST calling code should still
  work, but anything that expects a CODE reference will now instead find
  a blessed object.
- BUG FIX: Fix leaked scalars returned from Perl callbacks.
- Tweak discussion of memory-leak detection.
- Add missing regexp test.
