@@ -3,6 +3,7 @@ Revision history for Perl extension JavaScript::QuickJS:
 0.20
 - Properly free QuickJS resources upon failure to convert Perl parameters
   to JavaScript.
+- Add Promise support.
 
 0.19 Fri 1 Dec 2023
 - BREAKING CHANGE: Enabling std() or os() now creates globals by those names.
